--- a/interactive-homework-assistant.html
+++ b/interactive-homework-assistant.html
@@ -42,9 +42,11 @@
     <div class="project-description-title-container">
       <div>
         <h1 class="project-description-section-header">Interactive Homework Assistant</h1>
-        <p style="font-style:italic">PHIL 104 Class—Sac State<br>Summer 2023</p>
+        <p style="font-style:italic; color:var(--accent-color)">PHIL 104 Class—Sac State<br>Summer 2023</p>
       </div>
-      <img src="developer-image.svg" alt="" class="project-description-title-image">
+      <div class="project-description-title-image-wrapper">
+        <img src="developer-image.svg" alt="" class="project-description-title-image">
+      </div>
     </div>
     <h2 class="project-description-section-header">Problem and Solution</h2>
     <ul>
