--- a/project-copies/interactive-homework-assistant/index.html
+++ b/project-copies/interactive-homework-assistant/index.html
@@ -516,7 +516,7 @@ let discussionData = {
 </body>
 <style>
   body {
-    margin: 30px;
+    margin: min(3vw, 30px);
   }
 
   p, h1, h2, h3, label, a {
