--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@
         <p id="softwareGridTitle" class="accent-color">HTML<br>Strong experience</p>
       </div>
       <p class="accent-color" id="selfSummary">
-        Coding, teaching, and creative problem solving.<br>
-        <a class="hyperlink" style="font-weight:100" onclick="onEmailClick()" role="button">ikebot33@protonmail.com</a>
+        Coding, teaching, and creative problem solving.
       </p>
+      <button class="hyperlink" style="font-weight:100" onclick="onEmailClick()">ikebot33@protonmail.com</a>
     </div>
   </header>
   
@@ -151,7 +151,7 @@
       </div>
     </a>
     
-    <a href="" class="project-card">
+    <a href="rhetorical-analysis.html" class="project-card">
       <img src="developer-image.svg" alt="" class="project-card-image">
       <div class="project-title-and-description-container">
         <h4 class="project-title">Comprehensive Rhetorical Analysis Guide (COMS 100B)</h4>
