--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       </div>
     </a>
     
-    <a href="" class="project-card">
+    <a href="cracker-multiplication.html" class="project-card">
       <img src="developer-image.svg" alt="" class="project-card-image">
       <div class="project-title-and-description-container">
         <h4 class="project-title">Interactive Teaching Tool for Long Multiplication</h4>
