--- a/cracker-multiplication.html
+++ b/cracker-multiplication.html
@@ -62,7 +62,7 @@
     </div>
     <h2 class="project-description-section-header">Problem and Solution</h2>
     <ul>
-      <li><b>Problem: </b>An unofficial math education startup tasked me with finding new, creative ways to teach math with interactive programs. Traditional methods of teaching long multiplication often fail to explain how long multiplication really works, inhibiting comprehension and a deeper understanding</li>
+      <li><b>Problem: </b>An unofficial math education startup tasked me with <b style="color:var(--accent-color-2); font-weight:bold;">finding new, creative ways to teach math</b> with interactive programs. Traditional methods of teaching long multiplication often fail to explain how long multiplication really works, inhibiting comprehension and a deeper understanding</li>
       <li><b>Solution: </b>An interactive program that intuitively demonstrates long multiplication using the width and height of a graham cracker</li>
     </ul>
     <h2 class="project-description-section-header">Skills Demonstrated</h2>
@@ -75,7 +75,7 @@
       <li>Although the startup did not secure funding and this program remained unused, the program aligned with the startup’s mission of rethinking math education</li>
     </ul>
     <h2 class="project-description-section-header">Description</h2>
-    <p>Volunteering for an unofficial math education startup, I collaborated with the project lead to ensure that my first program aligned with the startup's goals and vision of finding unique, creative ways to teach math.<br><br>The end result is an interactive program that visually explains how the process of long multiplication works, by having the user tap a virtual graham cracker to split it into the individual components that are summed in a long multiplication problem, showing how the method breaks down the problem into easier steps.</p>
+    <p>Volunteering for an unofficial math education startup, I collaborated with the project lead to ensure that my first program aligned with the startup's goals and vision of finding unique, creative ways to teach math.<br><br>The end result is an interactive program that visually explains how the process of long multiplication works, by having the user tap a virtual graham cracker to split it into the individual components that are summed in a long multiplication problem, <b style="color:var(--accent-color-2)">showing how the method breaks down the problem into easier steps.</b></p>
   </section>
 </body>
 </html>
