--- a/rhetorical-analysis.html
+++ b/rhetorical-analysis.html
@@ -25,7 +25,7 @@
       background-image:url("images/rhet-analysis-doc.png");
       background-repeat:repeat-y;
       background-size:cover;
-      width:70%;
+      width:65%;
       height:100%;
       animation: rhetDocScrollAnimation 70s linear infinite;
       animation-fill-mode:forwards;
@@ -35,9 +35,9 @@
       background-image:url("images/rhet-analysis-comments.png");
       background-repeat:repeat-y;
       background-size:cover;
-      width:30%;
+      width:35%;
       height:100%;
-      animation: rhetDocScrollAnimation 90s linear infinite;
+      animation: rhetDocScrollAnimation 70s linear infinite;
       animation-fill-mode:forwards;
     }
     
@@ -55,8 +55,8 @@
 </head>
 <body>
   <header class="page-header-for-project-description">
-    <a href="index.html"></a>
-    <img src="svg-icons/arrow-left.svg" alt="Right Arrow" class="header-back-arrow">
+    <a href="index.html" aria-label="Return to home page"></a>
+    <img src="svg-icons/arrow-left.svg" alt="Left Arrow" class="header-back-arrow">
     <img src="developer-image.svg" alt="" class="page-header-profile-image">
     <h1 class="page-title-for-project-description">Ike Bischof</h1>
   </header>
@@ -100,7 +100,7 @@
     <h2 class="project-description-section-header">Problem and Solution</h2>
     <ul>
       <li><b>Problem: </b>Students in COMS 100B (Rhetorical analysis) at Sac State University often struggle with complex writing-intensive rhetorical analysis assignments</li>
-      <li><b>Solution: </b>A comprehensive outline document that provides detailed guidance on how to complete all the requirements for every assignment</li>
+      <li><b>Solution: </b>A comprehensive outline document that provides detailed guidance on how to complete all the requirements for every assignment, made in close collaboration with the professor.</li>
     </ul>
     <h2 class="project-description-section-header">Skills Demonstrated</h2>
     <ul>
