--- a/interactive-homework-assistant.html
+++ b/interactive-homework-assistant.html
@@ -23,8 +23,8 @@
 </head>
 <body>
   <header class="page-header-for-project-description">
-    <a href="index.html"></a>
-    <img src="svg-icons/arrow-left.svg" alt="Right Arrow" class="header-back-arrow">
+    <a href="index.html" aria-label="Return to home page"></a>
+    <img src="svg-icons/arrow-left.svg" alt="Left Arrow" class="header-back-arrow">
     <img src="developer-image.svg" alt="" class="page-header-profile-image">
     <h1 class="page-title-for-project-description">Ike Bischof</h1>
   </header>
