--- a/keyboard-remapping.html
+++ b/keyboard-remapping.html
@@ -40,7 +40,7 @@
         <img src="svg-icons/expand.svg" alt="Expand" title="Expand">
       </button>
       
-      <a class="full-project-hyperlink" href="project-copies/interactive-homework-assistant/index.html" target="_blank">
+      <a aria-label="Open project in new tab" class="full-project-hyperlink" href="project-copies/interactive-homework-assistant/index.html" target="_blank">
         Open project in new tab
         <svg viewBox="0 0 798.34 798.34">
           <path id="Vector" class="external-link-icon-path" d="M282.79,96.56h-83.8c-52.15,0-78.24,0-98.16,10.15-17.52,8.93-31.75,23.16-40.68,40.68-10.15,19.92-10.15,46.01-10.15,98.16v353.82c0,52.15,0,78.21,10.15,98.13,8.93,17.52,23.16,31.78,40.68,40.7,19.9,10.14,45.96,10.14,98.01,10.14h354.11c52.04,0,78.07,0,97.97-10.14,17.52-8.92,31.8-23.2,40.73-40.72,10.14-19.9,10.14-45.93,10.14-97.98v-83.94M748.34,282.78V50M748.34,50h-232.78M748.34,50l-325.89,325.89"/>
