--- a/merit-program-chart-redesign.html
+++ b/merit-program-chart-redesign.html
@@ -34,8 +34,8 @@
     
     
     <div class="project-container-outer project-container-covered-by-anchor" style="height:fit-content; background-color:var(--project-card-background-lighter)">
-      <a class="anchor-covering-project-container" href="https://docs.google.com/spreadsheets/d/1VW9Teq0bQsq1h5gnI90mgA_PE9DHXhuXGG2TE_yg0uQ/edit?usp=sharing" target="_blank"></a>
-      <img src="images/new-mrp-chart.png" alt="" width="100%">
+      <a aria-label="Open project in new tab" class="anchor-covering-project-container" href="https://docs.google.com/spreadsheets/d/1VW9Teq0bQsq1h5gnI90mgA_PE9DHXhuXGG2TE_yg0uQ/edit?usp=sharing" target="_blank"></a>
+      <img src="images/new-mrp-chart.png" alt="Colorful detailed spreadsheet listing bronze, silver, gold, and platinum requirements for a Member Recognition Program." width="100%">
       <p class="full-project-hyperlink">
         View full project
         <svg viewBox="0 0 798.34 798.34">
