--- a/rhetorical-analysis.html
+++ b/rhetorical-analysis.html
@@ -63,7 +63,7 @@
   <section class="main-body">
     
     <div class="project-container-outer rhet-scroll-container project-container-covered-by-anchor" data-expandedheight="800px" style="height: 300px; display:flex;" data-unexpandedheight="300px">
-      <a class="anchor-covering-project-container" href="https://docs.google.com/document/d/1jgEiFs3Z1BiYGZXU_w_q4EoFAGDgxIF-oN-H2OEKRJw/edit?usp=sharing" target="_blank"></a>
+      <a aria-label="Open project in new tab" class="anchor-covering-project-container" href="https://docs.google.com/document/d/1jgEiFs3Z1BiYGZXU_w_q4EoFAGDgxIF-oN-H2OEKRJw/edit?usp=sharing" target="_blank"></a>
       <div class="rhet-doc-scroll" role="img" aria-label="Rhetorical analysis outline Google Doc"></div>
       <div class="rhet-comment-scroll" role="img" aria-label="Comments from Ike Bischof explaining the outline document"></div>
       <!-- <embed type="text/html" src="https://docs.google.com/document/d/1jgEiFs3Z1BiYGZXU_w_q4EoFAGDgxIF-oN-H2OEKRJw/edit?usp=sharing" style="background-color:var(--text-color)"> -->
