--- a/interactive-homework-assistant.html
+++ b/interactive-homework-assistant.html
@@ -62,7 +62,7 @@
     </div>
     <h2 class="project-description-section-header">Problem and Solution</h2>
     <ul>
-      <li><b>Problem: </b>Students in PHIL 104 (Philosophy of Bioethics) found the instructions on discussion board assignments to be complicated and intimidating <a href="https://drive.google.com/file/d/1vOTtE3F9rNSnyc5oRy77WcfhodSUOdQn/view?usp=sharing" class="hyperlink">(see here)</a>, with very specific formatting requirements.</li>
+      <li><b>Problem: </b>Students in PHIL 104 (Philosophy of Bioethics) found the <a href="https://drive.google.com/file/d/1vOTtE3F9rNSnyc5oRy77WcfhodSUOdQn/view?usp=sharing" class="hyperlink">instructions on discussion board assignments (see here)</a> to be complicated and intimidating, with very specific formatting requirements.</li>
       <li><b>Solution: </b>An interactive, fill-in-the-blank style website that breaks down discussion assignments into manageable steps, giving students more mental space to craft thoughtful arguments about their positions.</li>
     </ul>
     <h2 class="project-description-section-header">Skills Demonstrated</h2>
