--- a/cracker-multiplication.html
+++ b/cracker-multiplication.html
@@ -72,10 +72,10 @@
     </ul>
     <h2 class="project-description-section-header">Results</h2>
     <ul>
-      <li>Although the startup did not secure funding and this program remained unused, the program aligned with the startup’s mission of rethinking math education</li>
+      <li>Although the startup did not secure funding and this program remained unused, the <b style="color:var(--accent-color-2); font-weight: bold;">program aligned with the startup’s mission of rethinking math education</b></li>
     </ul>
     <h2 class="project-description-section-header">Description</h2>
-    <p>Volunteering for an unofficial math education startup, I collaborated with the project lead to ensure that my first program aligned with the startup's goals and vision of finding unique, creative ways to teach math.<br><br>The end result is an interactive program that visually explains how the process of long multiplication works, by having the user tap a virtual graham cracker to split it into the individual components that are summed in a long multiplication problem, <b style="color:var(--accent-color-2)">showing how the method breaks down the problem into easier steps.</b></p>
+    <p>Volunteering for an unofficial math education startup, <b style="color:var(--accent-color-2)">I collaborated with the project lead</b> to ensure that my first program aligned with the startup's goals and vision of finding unique, creative ways to teach math.<br><br>The end result is an interactive program that visually explains how the process of long multiplication works, by having the user tap a virtual graham cracker to split it into the individual components that are summed in a long multiplication problem, <b style="color:var(--accent-color-2)">showing how the method breaks down the problem into easier steps.</b></p>
   </section>
 </body>
 </html>
