--- a/interactive-homework-assistant.html
+++ b/interactive-homework-assistant.html
@@ -63,7 +63,7 @@
     <h2 class="project-description-section-header">Problem and Solution</h2>
     <ul>
       <li><b>Problem: </b>Students in PHIL 104 (Philosophy of Bioethics) found the <a href="https://drive.google.com/file/d/1vOTtE3F9rNSnyc5oRy77WcfhodSUOdQn/view?usp=sharing" class="hyperlink">instructions on discussion board assignments (see here)</a> to be complicated and intimidating, with very specific formatting requirements.</li>
-      <li><b>Solution: </b>An interactive, fill-in-the-blank style website that breaks down discussion assignments into manageable steps, giving students more mental space to craft thoughtful arguments about their positions.</li>
+      <li><b>Solution: </b>An interactive, fill-in-the-blank style website that breaks down discussion assignments into manageable steps, <b style="color:var(--accent-color-2);font-weight: bold;">giving students more mental space</b> to craft thoughtful arguments about their positions.</li>
     </ul>
     <h2 class="project-description-section-header">Skills Demonstrated</h2>
     <ul>
@@ -72,10 +72,10 @@
     </ul>
     <h2 class="project-description-section-header">Results</h2>
     <ul>
-      <li><b>Feedback: </b>Students reported that the program was immensely helpful for making the assignments more manageable. The professor praised the effort as a good example of how students can leverage technology in their education in ways that don’t involve cheating or plagiarism.</li>
+      <li><b>Feedback: </b>Students reported that the program was <b style="color:var(--accent-color-2); font-weight: bold;">immensely helpful</b> for making the assignments more manageable. <b style="color:var(--accent-color-2); font-weight: bold;">The professor praised the effort</b> as a good example of how students can leverage technology in their education in ways that don’t involve cheating or plagiarism.</li>
     </ul>
     <h2 class="project-description-section-header">Description</h2>
-    <p>A user-friendly dynamic online form that breaks down discussion board assignments into manageable steps, presenting one step at a time to reduce cognitive burden and assist with formatting. The program offers clear, concise instructions, and alerts the user if their writing is incomplete or too short. At the end, the program compiles all of the user’s inputs into a complete post, with the formatting done automatically.</p>
+    <p>A user-friendly dynamic online form that breaks down discussion board assignments into manageable steps, <b style="color:var(--accent-color-2)">presenting one step at a time to reduce cognitive burden</b> and assist with formatting. The program offers clear, concise instructions, and alerts the user if their writing is incomplete or too short. At the end, <b style="color:var(--accent-color-2)">the program compiles all of the user’s inputs</b> into a complete post, with the formatting done automatically.</p>
   </section>
 </body>
 </html>
