--- a/project-copies/chart-streamline/index.html
+++ b/project-copies/chart-streamline/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quick Color Picker</title>
+  <title>Ike Bischof</title>
   <style>
     body {
       margin: min(2vw, 10px), min(22vw, 10px)
