--- a/project-copies/cracker-multiplication/index.html
+++ b/project-copies/cracker-multiplication/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <title>Cracker Multiplication</title>
+    <title>Ike Bischof</title>
     <link rel="stylesheet" href="style.css">
     <script src="libraries/p5.min.js" type="text/javascript"></script>
 
