--- a/project-copies/interactive-homework-assistant/index.html
+++ b/project-copies/interactive-homework-assistant/index.html
@@ -2,7 +2,7 @@
 <!-- v2.5 -->
 <head>
   <meta charset="UTF-8">
-  <title>📎PHIL 104 DB Assistant</title>
+  <title>Ike Bischof</title>
   <script src="../jquery.js"></script>
   <script src="countable.js"></script>
 </head>
