--- a/chart-making-streamlining.html
+++ b/chart-making-streamlining.html
@@ -53,7 +53,7 @@
     <div class="project-description-title-container">
       <div>
         <h1 class="project-description-section-header">
-          <a href="project-copies/interactive-homework-assistant/index.html" target="_blank">Workflow Streamlining Tool for Chart-Making
+          <a href="project-copies/chart-streamline/index.html" target="_blank">Workflow Streamlining Tool for Chart-Making
             <svg class="external-link-icon" viewBox="0 0 798.34 798.34">
               <path id="Vector" class="external-link-icon-path" d="M282.79,96.56h-83.8c-52.15,0-78.24,0-98.16,10.15-17.52,8.93-31.75,23.16-40.68,40.68-10.15,19.92-10.15,46.01-10.15,98.16v353.82c0,52.15,0,78.21,10.15,98.13,8.93,17.52,23.16,31.78,40.68,40.7,19.9,10.14,45.96,10.14,98.01,10.14h354.11c52.04,0,78.07,0,97.97-10.14,17.52-8.92,31.8-23.2,40.73-40.72,10.14-19.9,10.14-45.93,10.14-97.98v-83.94M748.34,282.78V50M748.34,50h-232.78M748.34,50l-325.89,325.89"/>
             </svg>
@@ -68,7 +68,7 @@
     <h2 class="project-description-section-header">Problem and Solution</h2>
     <ul>
       <li><b>Problem: </b>For students in JOUR 116 (Data Visualization), building charts with <a href="https://www.datawrapper.de/" class="hyperlink">Datawrapper</a> can be tedious and time-consuming. To use custom colors, students have to copy HTML color codes from another website.</li>
-      <li><b>Solution: </b>A simple webpage in a pop-up window that sits underneath Datawrapper, functioning like a hotbar that’s accessible at all times, allowing students to copy HTML color codes immediately with one click.</li>
+      <li><b>Solution: </b>A simple webpage in a pop-up window that sits underneath Datawrapper, <b style="color:var(--accent-color-2); font-weight: bold;">functioning like a hotbar</b> that’s accessible at all times, allowing students to copy HTML color codes immediately with one click.</li>
     </ul>
     <h2 class="project-description-section-header">Skills Demonstrated</h2>
     <ul>
@@ -77,7 +77,7 @@
     </ul>
     <h2 class="project-description-section-header">Results</h2>
     <ul>
-      <li>The professor praised the program as a resourceful way to complete assignments more efficiently</li>
+      <li><b style="color:var(--accent-color-2);font-weight: bold;">The professor praised the program</b> as a resourceful way to complete assignments more efficiently</li>
       <li>The program substantially streamlined the process of making charts with Datawrapper</li>
     </ul>
     <h2 class="project-description-section-header">Description</h2>
