--- a/rhetorical-analysis.html
+++ b/rhetorical-analysis.html
@@ -99,7 +99,7 @@
     </div>
     <h2 class="project-description-section-header">Problem and Solution</h2>
     <ul>
-      <li><b>Problem: </b>Students in COMS 100B (Rhetorical analysis) at Sac State University often struggle with complex writing-intensive rhetorical analysis assignments</li>
+      <li><b>Problem: </b>Students in COMS 100B (Rhetorical Analysis) at Sac State University often struggle with complex writing-intensive rhetorical analysis assignments</li>
       <li><b>Solution: </b>A comprehensive outline document that provides detailed guidance on how to complete all the requirements for every assignment, made in close collaboration with the professor.</li>
     </ul>
     <h2 class="project-description-section-header">Skills Demonstrated</h2>
@@ -113,9 +113,12 @@
     </ul>
     <h2 class="project-description-section-header">Description</h2>
     <p>An outline document thoroughly explaining (via comments on the right-hand side) what to write in each section of the rhetorical analysis assignments in COMS 100B. I decided to make this document in close collaboration with the professor to help myself and my peers ensure that we were meeting all the requirements for the assignments.</p>
-    <h2 class="project-description-section-header">Praise from the Professor</h2>
-    <p style="font-style:italic;"><b style="color:var(--accent-color-2)">I was thoroughly impressed with Ike's approach.</b> I even asked him if he would be willing to share his document with the class as it might help increase their understanding of the analysis process.</p>
-    <p style="font-style:italic;">Unsurprisingly, and unprompted, toward the end of the semester, <b style="color:var(--accent-color-2)">several of his classmates notified me of the help</b> he offered to them through emails and texts between classes. Some even said that <b style="color:var(--accent-color-2)">they would not have passed had it not been for his hard work.</b> I too am grateful for all the help he provided them.</p>
+    
+    <div style="background-color:var(--project-card-background-color); padding: 15px; border-radius:10px;">
+      <h2 class="project-description-section-header">Praise from the Professor</h2>
+      <p><b style="color:var(--accent-color-2)">"I was thoroughly impressed with Ike's approach.</b> I even asked him if he would be willing to share his document with the class as it might help increase their understanding of the analysis process.</p>
+      <p>Unsurprisingly, and unprompted, toward the end of the semester, <b style="color:var(--accent-color-2)">several of his classmates notified me of the help</b> he offered to them through emails and texts between classes. Some even said that <b style="color:var(--accent-color-2)">they would not have passed had it not been for his hard work.</b> I too am grateful for all the help he provided them."</p>
+    </div>
   </section>
 </body>
 </html>
