--- a/cracker-multiplication.html
+++ b/cracker-multiplication.html
@@ -20,12 +20,13 @@
     }
   </script>
   <title>Ike Bischof</title>
+  <link rel="icon" type="image/x-icon" href="images/profile-favicon.ico">
 </head>
 <body>
   <header class="page-header-for-project-description">
     <a href="index.html" aria-label="Return to home page"></a>
     <img src="svg-icons/arrow-left.svg" alt="Left Arrow" class="header-back-arrow">
-    <img src="developer-image.svg" alt="" class="page-header-profile-image">
+    <img src="images/profile-thicker.svg" alt="Large icon of a male with wavy hair and a button-up shirt" class="page-header-profile-image">
     <h1 class="page-title-for-project-description">Ike Bischof</h1>
   </header>
   <section class="main-body">
@@ -57,7 +58,7 @@
         <p style="font-style:italic; color:var(--accent-color)">Unofficial Math Education Startup<br>May 2022</p>
       </div>
       <div class="project-description-title-image-wrapper">
-        <img src="developer-image.svg" alt="" class="project-description-title-image">
+        <img src="project-icons/cracker-multiplication.svg" alt="An orange rectangle divided unevenly into four quadrants" class="project-card-image">
       </div>
     </div>
     <h2 class="project-description-section-header">Problem and Solution</h2>
@@ -68,7 +69,7 @@
     <h2 class="project-description-section-header">Skills Demonstrated</h2>
     <ul>
       <li><b>Technical skills: </b>Javascript, cross-browser testing, mobile testing, debugging, UX design</li>
-      <li><b>Soft skills: </b>Collaboration, time management, identifying & articulating requirements</li>
+      <li><b>Soft skills: </b>Explaining with visuals, collaboration, time management, identifying & articulating requirements</li>
     </ul>
     <h2 class="project-description-section-header">Results</h2>
     <ul>
