--- a/rhetorical-analysis.html
+++ b/rhetorical-analysis.html
@@ -20,6 +20,7 @@
     }
   </script>
   <title>Ike Bischof</title>
+  <link rel="icon" type="image/x-icon" href="images/profile-favicon.ico">
   <style>
     .rhet-doc-scroll {
       background-image:url("images/rhet-analysis-doc.png");
@@ -57,7 +58,7 @@
   <header class="page-header-for-project-description">
     <a href="index.html" aria-label="Return to home page"></a>
     <img src="svg-icons/arrow-left.svg" alt="Left Arrow" class="header-back-arrow">
-    <img src="developer-image.svg" alt="" class="page-header-profile-image">
+    <img src="images/profile-thicker.svg" alt="Large icon of a male with wavy hair and a button-up shirt" class="page-header-profile-image">
     <h1 class="page-title-for-project-description">Ike Bischof</h1>
   </header>
   <section class="main-body">
@@ -94,7 +95,7 @@
         <p style="font-style:italic; color:var(--accent-color)">COMS 100B Class—Sac State<br>Spring 2023</p>
       </div>
       <div class="project-description-title-image-wrapper">
-        <img src="developer-image.svg" alt="" class="project-description-title-image">
+        <img src="project-icons/rhetorical-analysis.svg" alt="A document with adjacent comments in orange boxes" class="project-card-image">
       </div>
     </div>
     <h2 class="project-description-section-header">Problem and Solution</h2>
