--- a/interactive-homework-assistant.html
+++ b/interactive-homework-assistant.html
@@ -20,12 +20,13 @@
     }
   </script>
   <title>Ike Bischof</title>
+  <link rel="icon" type="image/x-icon" href="images/profile-favicon.ico">
 </head>
 <body>
   <header class="page-header-for-project-description">
     <a href="index.html" aria-label="Return to home page"></a>
     <img src="svg-icons/arrow-left.svg" alt="Left Arrow" class="header-back-arrow">
-    <img src="developer-image.svg" alt="" class="page-header-profile-image">
+    <img src="images/profile-thicker.svg" alt="Large icon of a male with wavy hair and a button-up shirt" class="page-header-profile-image">
     <h1 class="page-title-for-project-description">Ike Bischof</h1>
   </header>
   <section class="main-body">
@@ -57,7 +58,7 @@
         <p style="font-style:italic; color:var(--accent-color)">PHIL 104 Class—Sac State<br>Summer 2023</p>
       </div>
       <div class="project-description-title-image-wrapper">
-        <img src="developer-image.svg" alt="" class="project-description-title-image">
+        <img src="project-icons/interactive-homework-assistant.svg" alt="A blank dropdown menu next to a tilted paperclip" class="project-card-image">
       </div>
     </div>
     <h2 class="project-description-section-header">Problem and Solution</h2>
@@ -68,7 +69,7 @@
     <h2 class="project-description-section-header">Skills Demonstrated</h2>
     <ul>
       <li><b>Technical skills: </b>HTML, CSS, Javascript, debugging, UX design</li>
-      <li><b>Soft skills: </b>Creative problem-solving, attention to detail, organizational skills, distilling information</li>
+      <li><b>Soft skills: </b>Distilling information, creative problem-solving, attention to detail, organizational skills</li>
     </ul>
     <h2 class="project-description-section-header">Results</h2>
     <ul>
