--- a/keyboard-remapping.html
+++ b/keyboard-remapping.html
@@ -20,12 +20,13 @@
     }
   </script>
   <title>Ike Bischof</title>
+  <link rel="icon" type="image/x-icon" href="images/profile-favicon.ico">
 </head>
 <body>
   <header class="page-header-for-project-description">
     <a href="index.html" aria-label="Return to home page"></a>
     <img src="svg-icons/arrow-left.svg" alt="Left Arrow" class="header-back-arrow">
-    <img src="developer-image.svg" alt="" class="page-header-profile-image">
+    <img src="images/profile-thicker.svg" alt="Large icon of a male with wavy hair and a button-up shirt" class="page-header-profile-image">
     <h1 class="page-title-for-project-description">Ike Bischof</h1>
   </header>
   <section class="main-body">
@@ -42,7 +43,7 @@
         <p style="font-style:italic; color:var(--accent-color)">Personal ongoing project<br>Designed over several years</p>
       </div>
       <div class="project-description-title-image-wrapper">
-        <img src="developer-image.svg" alt="" class="project-description-title-image">
+        <img src="project-icons/keyboard-remapping.svg" alt="A keyboard, where some of the keys have an orange duplicate key overlaying them" class="project-card-image">
       </div>
     </div>
     <h2 class="project-description-section-header">Problem and Solution</h2>
