--- a/keystroke-visualizer.html
+++ b/keystroke-visualizer.html
@@ -20,12 +20,13 @@
     }
   </script>
   <title>Ike Bischof</title>
+  <link rel="icon" type="image/x-icon" href="images/profile-favicon.ico">
 </head>
 <body>
   <header class="page-header-for-project-description">
     <a href="index.html" aria-label="Return to home page"></a>
     <img src="svg-icons/arrow-left.svg" alt="Left Arrow" class="header-back-arrow">
-    <img src="developer-image.svg" alt="" class="page-header-profile-image">
+    <img src="images/profile-thicker.svg" alt="Large icon of a male with wavy hair and a button-up shirt" class="page-header-profile-image">
     <h1 class="page-title-for-project-description">Ike Bischof</h1>
   </header>
   <section class="main-body">
@@ -58,7 +59,7 @@
         <p style="font-style:italic; color:var(--accent-color)">Live demonstration for Circle K International—Sac State<br>Spring 2024</p>
       </div>
       <div class="project-description-title-image-wrapper">
-        <img src="developer-image.svg" alt="" class="project-description-title-image">
+        <img src="project-icons/keystroke-visualizer.svg" alt="A keyboard where some keys are highlighted in green" class="project-card-image">
       </div>
     </div>
     <h2 class="project-description-section-header">Problem and Solution</h2>
@@ -70,7 +71,7 @@
     <ul>
       <li><b>Technical skills: </b>CSS, Javascript, debugging, Javascript keycodes and key events</li>
       <li><b>Soft skills: </b>Creative problem-solving, resourcefulness, time management</li>
-      <li><i>Disclaimer: the HTML code for constructing the keyboard display was borrowed from a <a href="https://www.keyboardtester.com/" class="hyperlink">similar website</a></i></li>
+      <li><i>Note: the HTML code for constructing the keyboard display was borrowed from a <a href="https://www.keyboardtester.com/" class="hyperlink">similar website</a></i></li>
     </ul>
     <h2 class="project-description-section-header">Results</h2>
     <ul>
