--- a/rhetorical-analysis.html
+++ b/rhetorical-analysis.html
@@ -98,6 +98,11 @@
         <img src="project-icons/rhetorical-analysis.svg" alt="A document with adjacent comments in orange boxes" class="project-card-image">
       </div>
     </div>
+    <div style="background-color:var(--project-card-background-color); padding: 15px; border-radius:10px;">
+      <p><b style="color:var(--accent-color-2)">“I was thoroughly impressed with Ike's approach.</b> I even asked him if he would be willing to share his document with the class as it might help increase their understanding of the analysis process.</p>
+      <p>Unsurprisingly, and unprompted, toward the end of the semester, <b style="color:var(--accent-color-2)">several of his classmates notified me of the help</b> he offered to them through emails and texts between classes. Some even said that <b style="color:var(--accent-color-2)">they would not have passed had it not been for his hard work.</b> I too am grateful for all the help he provided them.”</p>
+      <p><i> — COMS 100B Professor</i></p>
+    </div>
     <h2 class="project-description-section-header">Problem and Solution</h2>
     <ul>
       <li><b>Problem: </b>Students in COMS 100B (Rhetorical Analysis) at Sac State University often struggle with complex writing-intensive rhetorical analysis assignments</li>
@@ -115,11 +120,7 @@
     <h2 class="project-description-section-header">Description</h2>
     <p>An outline document thoroughly explaining (via comments on the right-hand side) what to write in each section of the rhetorical analysis assignments in COMS 100B. I decided to make this document in close collaboration with the professor to help myself and my peers ensure that we were meeting all the requirements for the assignments.</p>
     
-    <div style="background-color:var(--project-card-background-color); padding: 15px; border-radius:10px;">
-      <h2 class="project-description-section-header">Praise from the Professor</h2>
-      <p><b style="color:var(--accent-color-2)">"I was thoroughly impressed with Ike's approach.</b> I even asked him if he would be willing to share his document with the class as it might help increase their understanding of the analysis process.</p>
-      <p>Unsurprisingly, and unprompted, toward the end of the semester, <b style="color:var(--accent-color-2)">several of his classmates notified me of the help</b> he offered to them through emails and texts between classes. Some even said that <b style="color:var(--accent-color-2)">they would not have passed had it not been for his hard work.</b> I too am grateful for all the help he provided them."</p>
-    </div>
+    
   </section>
 </body>
 </html>
