--- a/keystroke-visualizer.html
+++ b/keystroke-visualizer.html
@@ -24,7 +24,7 @@
 </head>
 <body>
   <header class="page-header-for-project-description">
-    <a href="index.html" aria-label="Return to home page"></a>
+    <a href="/" aria-label="Return to home page"></a>
     <img src="svg-icons/arrow-left.svg" alt="Left Arrow" class="header-back-arrow">
     <img src="images/profile-thicker.svg" alt="Large icon of a male with wavy hair and a button-up shirt" class="page-header-profile-image">
     <h1 class="page-title-for-project-description">Ike Bischof</h1>
