--- a/cracker-multiplication.html
+++ b/cracker-multiplication.html
@@ -77,6 +77,7 @@
     </ul>
     <h2 class="project-description-section-header">Description</h2>
     <p>Volunteering for an unofficial math education startup, <b style="color:var(--accent-color-2)">I collaborated with the project lead</b> to ensure that my first program aligned with the startup's goals and vision of finding unique, creative ways to teach math.<br><br>The end result is an interactive program that visually explains how the process of long multiplication works, by having the user tap a virtual graham cracker to split it into the individual components that are summed in a long multiplication problem, <b style="color:var(--accent-color-2)">showing how the method breaks down the problem into easier steps.</b></p>
+    <p>This program was built using a <a href="https://github.com/IkeB108/P5-Mobile-Friendly-Cursor-Library" class="hyperlink">Javascript library</a> I created for P5JS (Mobile Friendly Cursor library).</p>
   </section>
 </body>
 </html>
