--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <button class="hyperlink" style="font-weight:100" onclick="onEmailClick()">ikebot33@protonmail.com</button>
       
       <p>
-        <a href="https://docs.google.com/document/d/1loejswklvyEDs4cdVkdKPUqlclTpvnbdP4yEtlORJuE/edit?usp=sharing" class="hyperlink navlink" style="margin-left: 0px;">Resume</a>•<a href="https://www.youtube.com/c/ikebot" class="hyperlink navlink">YouTube</a>•<a href="https://www.ikebot.dev" class="hyperlink navlink">ikebot.dev</a>•<button class="hyperlink navlink" style="margin: 0px 10px;" onclick="onEmailClick()">Contact</button>
+        <a href="resume.pdf" class="hyperlink navlink" style="margin-left: 0px;">Resume</a>•<a href="https://www.youtube.com/c/ikebot" class="hyperlink navlink">YouTube</a>•<a href="https://www.ikebot.dev" class="hyperlink navlink">ikebot.dev</a>•<button class="hyperlink navlink" style="margin: 0px 10px;" onclick="onEmailClick()">Contact</button>
       </p>
     </div>
   </header>
@@ -312,7 +312,7 @@
   
     <!-- RESUME -->
     <h3 class="project-category-header">📄 Résumé</h3>
-    <a href="https://docs.google.com/document/d/1loejswklvyEDs4cdVkdKPUqlclTpvnbdP4yEtlORJuE/edit?usp=sharing" class="project-card">
+    <a href="resume.pdf" class="project-card">
       <img src="images/profile.svg" alt="Large icon of a male with wavy hair and a button-up shirt" class="project-card-image">
       <div class="project-title-and-description-container">
         <h4 class="project-title">Résumé</h4>
