--- a/rhetorical-analysis.html
+++ b/rhetorical-analysis.html
@@ -64,7 +64,7 @@
   <section class="main-body">
     
     <div class="project-container-outer rhet-scroll-container project-container-covered-by-anchor" data-expandedheight="800px" style="height: 300px; display:flex;" data-unexpandedheight="300px">
-      <a aria-label="Open project in new tab" class="anchor-covering-project-container" href="https://docs.google.com/document/d/1jgEiFs3Z1BiYGZXU_w_q4EoFAGDgxIF-oN-H2OEKRJw/edit?usp=sharing" target="_blank"></a>
+      <a aria-label="Open project in new tab" class="anchor-covering-project-container" href="project-copies/rhetorical-analysis/Rhetorical_Analysis_Outline_Template.docx" download></a>
       <div class="rhet-doc-scroll" role="img" aria-label="Rhetorical analysis outline Google Doc"></div>
       <div class="rhet-comment-scroll" role="img" aria-label="Comments from Ike Bischof explaining the outline document"></div>
       <!-- <embed type="text/html" src="https://docs.google.com/document/d/1jgEiFs3Z1BiYGZXU_w_q4EoFAGDgxIF-oN-H2OEKRJw/edit?usp=sharing" style="background-color:var(--text-color)"> -->
@@ -86,7 +86,7 @@
     <div class="project-description-title-container">
       <div>
         <h1 class="project-description-section-header">
-          <a href="https://docs.google.com/document/d/1jgEiFs3Z1BiYGZXU_w_q4EoFAGDgxIF-oN-H2OEKRJw/edit?usp=sharing" target="_blank">Comprehensive Rhetorical Analysis Guide
+          <a href="project-copies/rhetorical-analysis/Rhetorical_Analysis_Outline_Template.docx" download>Comprehensive Rhetorical Analysis Guide
             <svg class="external-link-icon" viewBox="0 0 798.34 798.34">
               <path id="Vector" class="external-link-icon-path" d="M282.79,96.56h-83.8c-52.15,0-78.24,0-98.16,10.15-17.52,8.93-31.75,23.16-40.68,40.68-10.15,19.92-10.15,46.01-10.15,98.16v353.82c0,52.15,0,78.21,10.15,98.13,8.93,17.52,23.16,31.78,40.68,40.7,19.9,10.14,45.96,10.14,98.01,10.14h354.11c52.04,0,78.07,0,97.97-10.14,17.52-8.92,31.8-23.2,40.73-40.72,10.14-19.9,10.14-45.93,10.14-97.98v-83.94M748.34,282.78V50M748.34,50h-232.78M748.34,50l-325.89,325.89"/>
             </svg>
