--- a/explainer-videos.html
+++ b/explainer-videos.html
@@ -33,7 +33,7 @@
     
     <div class="project-container-outer" style="height:fit-content; background-color:var(--project-card-background-lighter);text-align:center;">
       <iframe width="100%" style="aspect-ratio: 2.5 / 1; margin:0; padding:0;"
-        src="https://www.youtube.com/embed/bSvOVSmctTw"
+        src="https://www.youtube.com/embed/Vm0ZAapAP1A"
         title="YouTube video player"
         frameborder="0"
         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
