--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
       <button class="hyperlink" style="font-weight:100" onclick="onEmailClick()">ikebot33@protonmail.com</button>
       
       <p>
-        <a href="resume.pdf" class="hyperlink navlink" style="margin-left: 0px;">Resume</a>•<a href="https://www.youtube.com/c/ikebot" class="hyperlink navlink">YouTube</a>•<a href="https://www.ikebot.dev" class="hyperlink navlink">ikebot.dev</a>•<button class="hyperlink navlink" style="margin: 0px 10px;" onclick="onEmailClick()">Contact</button>
+        <a href="resume.pdf" class="hyperlink navlink" style="margin-left: 0px;">Resume</a>•<a href="https://www.linkedin.com/in/ikebischof108" class="hyperlink navlink">LinkedIn</a>•<a href="https://www.ikebot.dev" class="hyperlink navlink">ikebot.dev</a>•<a href="https://www.youtube.com/c/ikebot" class="hyperlink navlink">YouTube</a>•<button class="hyperlink navlink" style="margin: 0px 10px;" onclick="onEmailClick()">Contact</button>
       </p>
     </div>
   </header>
@@ -147,7 +147,7 @@
   <!-- Project Showcase Section -->
   <section class="main-body" id="projectShowcaseSection">
     <h2 id="projectShowcaseH2">Project Showcase</h2>
-    <p>I solve practical problems with creative approaches that leverage my coding skills, analytical skills, and explanatory skills. Here are some examples.</p>
+    <p>I solve practical problems and explain technical concepts with creative approaches that leverage my coding skills, analytical skills, and explanatory skills. Here are some examples.</p>
     
     <!-- EXPLANATORY PROJECTS -->
     <h3 class="project-category-header">💬 Explanatory Projects</h3>
