--- a/template.html
+++ b/template.html
@@ -36,7 +36,7 @@
     <div class="project-container-outer" data-expandedheight="800px" style="height: 300px;" data-unexpandedheight="300px">
       
       <embed type="text/html" src="project-copies/interactive-homework-assistant/index.html" style="background-color:var(--text-color)">
-      
+      <!-- If using an img instead of embed, set display to block to avoid a gap at the bottom of the div -->
       <button onclick="expandEmbed()" class="expand-button">
         <img src="svg-icons/expand.svg" alt="Expand" title="Expand">
       </button>
