--- a/ws-browser.html
+++ b/ws-browser.html
@@ -86,7 +86,7 @@
     <h3>Solution: New Worksheet Browser</h3>
     <p>My solution was to design and build <a href="project-copies/ws-browser/index.html?placeholderimages" class="hyperlink">my own website</a> for browsing answer keys.</p>
     <p>This tool doubles as a way for math trainers to record what worksheets our students were working on.</p>
-    <p>I made a rough sketch of the layout, which professional designer <a href="https://www.heuschmidt.io/" class="hyperlink">Paul Heuschmidt</a> refined into a professional and aesthetically pleasing design in Figma. Then, I built the website with React.</p>
+    <p>I made a rough wireframe of the layout, which professional designer <a href="https://www.heuschmidt.io/" class="hyperlink">Paul Heuschmidt</a> refined into a professional and aesthetically pleasing design in Figma. Then, I built the website with React.</p>
     <p>Fast loading:</p>
     <ul>
       <li>⚡ All worksheets load instantly</li>
@@ -104,16 +104,30 @@
     <ul>
       <li>📝 Record what worksheets each student works on during class</li>
       <li>📝 Record notes about what was done with each worksheet</li>
-      <li>🧩 This system uses Google Apps Script to integrate with our progress tracker spreadsheet</li>
+      <li>🧩 This system uses Google Apps Script to integrate with our student progress tracking spreadsheet</li>
     </ul>
     <img src="images/ws-browser/compare-new-a.webp" alt="" style="width:100%; display:block;">
     <br>
     <img src="images/ws-browser/compare-new-b.webp" alt="" style="width:100%; display:block;">
     
     <h2 class="project-description-section-header">Skills Demonstrated</h2>
+    <p>Technical skills:</p>
     <ul>
-      <li><b>Technical skills: </b>React, npm, git, HTML, CSS, Javascript, Google Apps Script, debugging, UX design, performance optimization, designing responsive layouts for all devices, prototyping, iterative design</li>
-      <li><b>Soft skills: </b>User research, user-centered design, collaborating and communicating design needs with a designer, creative problem-solving, organizational skills</li>
+      <li>React, HTML, CSS, Javascript</li>
+      <li>Building a component-based web app from the ground up</li>
+      <li>npm, git</li>
+      <li>Google Apps Script</li>
+      <li>Debugging, performance optimization</li>
+      <li>Cross-browser and cross-device compatibility testing and fixing</li>
+      <li>Designing responsive layouts for all devices</li>
+      <li>Prototyping, iterative design</li>
+    </ul>
+    <p>Soft skills:</p>
+    <ul>
+      <li>UI/UX Design</li>
+      <li>UX Writing</li>
+      <li>Wireframing in Figma</li>
+      <li>User-centered design, user testing</li>
     </ul>
     <h2 class="project-description-section-header">Results</h2>
     <ul>
