--- a/ws-browser-original-example.html
+++ b/ws-browser-original-example.html
@@ -142,7 +142,7 @@
       $("html").css("cursor", "progress")
       $(".open-worksheet-button").css("cursor", "progress")
       setTimeout( ()=> {
-        window.open('http://127.0.0.1:5500/project-copies/ws-browser/placeholder-ws.pdf', '_blank', 'popup', 'width=500,height=700')
+        window.open('project-copies/ws-browser/placeholder-ws.pdf', '_blank', 'popup', 'width=500,height=700')
         $("html").css("cursor", "default")
         $(".open-worksheet-button").css("cursor", "pointer")
       }, 2000)
