--- a/index.html
+++ b/index.html
@@ -139,8 +139,11 @@
       <button class="hyperlink" style="font-weight:100" onclick="onEmailClick()">ikebot33@protonmail.com</button>
       
       <p>
-        <a href="resume_apr_2025.pdf" class="hyperlink navlink" style="margin-left: 0px;">Resume</a>•<a href="https://www.linkedin.com/in/ikebischof108" class="hyperlink navlink">LinkedIn</a>•<a href="https://www.ikebot.dev" class="hyperlink navlink">ikebot.dev</a>•<a href="https://www.youtube.com/c/ikebot" class="hyperlink navlink">YouTube</a>•<button class="hyperlink navlink" style="margin: 0px 10px;" onclick="onEmailClick()">Contact</button>
+        <a href="resume_apr_2025.pdf" class="hyperlink navlink" style="margin-left: 0px;">Resume</a> • <a href="https://www.linkedin.com/in/ikebischof108" class="hyperlink navlink">LinkedIn</a> • <a href="https://www.ikebot.dev" class="hyperlink navlink">ikebot.dev</a> • <a href="https://www.youtube.com/c/ikebot" class="hyperlink navlink">YouTube</a> • <button class="hyperlink navlink" style="margin: 0px 10px;" onclick="onEmailClick()">Contact</button>
       </p>
+      <!-- <p>
+        <a>test</a><a>test</a><a>test</a><a>test</a>
+      </p> -->
     </div>
   </header>
   
